--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "name": "ip-map",
   "version": "1.0.0",
   "devDependencies": {
-    "@babel/plugin-syntax-top-level-await": "^7.14.5"
+    "@babel/plugin-syntax-top-level-await": "^7.14.5",
+    "@parcel/optimizer-image": "^2.9.3"
   },
   "scripts": {
     "start": "parcel src/index.html",
@@ -15,4 +16,5 @@
   "author": "",
   "license": "ISC",
   "description": ""
+  
 }
